<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frogoutofwell.yullfrogapplication.login.AgreementActivity"
    tools:showIn="@layout/activity_agreement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout4">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_essential"
            android:id="@+id/btn_essential"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/agree_look"
                android:id="@+id/textView30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_look1"
                android:id="@+id/btn_agreelook1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_look2"
                android:id="@+id/btn_agreelook2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_select"
                android:id="@+id/btn_select"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_select_detail"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="전체동의"
        android:id="@+id/btn_allagree"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="다음"
        android:id="@+id/btn_submit"
        android:layout_below="@+id/btn_allagree"
        android:layout_alignParentStart="true" />

</RelativeLayout>
