<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frogoutofwell.yullfrogapplication.write.WriteDoActivity"
    tools:showIn="@layout/activity_write_do">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="활동후기작성"
            android:paddingStart="69dp"
            android:id="@+id/text_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/review_notice"
            android:id="@+id/textView12"
            android:paddingStart="69dp"
            android:layout_below="@+id/text_info"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/do_term"
                android:id="@+id/textView23"
                android:layout_marginStart="69dp"
                android:layout_below="@+id/textView12"
                android:layout_alignParentStart="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_term"
                android:entries="@array/do_term"
                android:layout_marginEnd="27dp"
                android:layout_below="@+id/textView12"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textView23" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="55dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/do_rate"
                android:id="@+id/textView21"
                android:layout_marginStart="69dp"
                android:layout_below="@+id/spinner_term"
                android:layout_alignParentStart="true" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratebar"
                android:layout_marginStart="36dp"
                android:layout_below="@+id/spinner_term"
                android:layout_alignEnd="@+id/spinner_term" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/comment_title"
            android:id="@+id/textView2"
            android:layout_marginTop="54dp"
            android:layout_marginStart="69dp"
            android:layout_below="@+id/ratebar"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="306dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edit_comment"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_alignEnd="@+id/spinner_term" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/comment_good_title"
            android:id="@+id/textView3"
            android:layout_marginTop="32dp"
            android:layout_marginStart="69dp"
            android:layout_below="@+id/edit_comment"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="306dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edit_commentgood"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/edit_comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/comment_bad_title"
            android:id="@+id/textView4"
            android:layout_marginTop="32dp"
            android:layout_marginStart="69dp"
            android:layout_below="@+id/edit_commentgood"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="306dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edit_commentbad"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/edit_commentgood" />

        <Button
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:id="@+id/btn_upload"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/ic_submit"
            android:layout_below="@+id/edit_commentbad"
            android:layout_alignParentStart="true" />


    </LinearLayout>

</ScrollView>
